Modeller projeye eklendi, calistirildi ve test edildi

--- a/project.ipynb
+++ b/project.ipynb
@@ -4709,7 +4709,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "bites_cpu_venv",
    "language": "python",
    "name": "python3"
   },
