Arayuz entegresi tamamlandi

--- a/2.1_LSTM_Wandb.ipynb
+++ b/2.1_LSTM_Wandb.ipynb
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c9ca1b6a",
    "metadata": {},
    "outputs": [
@@ -12839,7 +12839,7 @@
     "\n",
     "# --- 1. Adım: En İyi Deneyin Hiperparametrelerini ve Model Dosyasını Belirle ---\n",
     "\n",
-    "# WandB arayüzünden 'mild-planet-32' deneyinin \"Config\" sekmesinden\n",
+    "# WandB arayüzünden 'model_path/lstm_LSTM_h50_l1.pt' deneyinin \"Config\" sekmesinden\n",
     "# bu bilgileri almalısın. \n",
     "best_run_config = {\n",
     "    'hidden_dim': 50,\n",
