Kodlar PEP8 Standartlarına göre düzenlendi

--- a/2.1_LSTM_Wandb.ipynb
+++ b/2.1_LSTM_Wandb.ipynb
@@ -58,13 +58,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "58fca627",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sıralı veri oluşturma fonksiyonu\n",
     "def create_sequences(data, lookback_window):\n",
+    "    \"\"\"\n",
+    "    Bir zaman serisi dizisini, modelin anlayacağı girdi (X) ve hedef (y) dizileri haline getirir.\n",
+    "    \"\"\"\n",
     "    X, y = [], []\n",
     "    for i in range(len(data) - lookback_window):\n",
     "        feature = data[i:(i + lookback_window)]\n",
@@ -112,13 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "24eaab71",
    "metadata": {},
    "outputs": [],
    "source": [
     "class LSTMModel(nn.Module):\n",
     "    def __init__(self, input_size=3, hidden_layer_size=50, num_layers=1, dropout=0.0, output_size=3):\n",
+    "        \"\"\"\n",
+    "        Belirtilen hiperparametrelerle modelin katmanlarını (LSTM ve Linear) tanımlar ve başlatır.\n",
+    "        \"\"\"\n",
     "        super().__init__()\n",
     "        self.lstm = nn.LSTM(\n",
     "            input_size=input_size,\n",
@@ -130,6 +135,9 @@
     "        self.linear = nn.Linear(hidden_layer_size, output_size)\n",
     "\n",
     "    def forward(self, input_seq):\n",
+    "        \"\"\"\n",
+    "        Girdi dizisini LSTM katmanından geçirir ve son zaman adımının çıktısını kullanarak nihai tahmini üretir.\n",
+    "        \"\"\"\n",
     "        lstm_out, _ = self.lstm(input_seq)\n",
     "        predictions = self.linear(lstm_out[:, -1, :])\n",
     "        return predictions"
@@ -137,13 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "054176ae",
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_and_evaluate_lstm(config):\n",
-    "    #  WandB Deneyini Başlat\n",
+    "    \"\"\"\n",
+    "    Verilen hiperparametre yapılandırması (config) ile bir LSTM modelini eğitir, \n",
+    "    her epoch'ta performansını değerlendirir ve tüm deney sonuçlarını Weights & Biases'a kaydeder.\n",
+    "    \"\"\"\n",
     "    run = wandb.init(project=\"bites-cpu-forecasting\",\n",
     "                      config=config, \n",
     "                      reinit=True,\n",
@@ -12834,13 +12845,15 @@
     "import plotly.graph_objects as go\n",
     "\n",
     "def mean_absolute_percentage_error(y_true, y_pred): \n",
+    "    \"\"\"\n",
+    "    Gerçek ve tahmin edilen değerler arasındaki ortalama mutlak yüzde hatayı (MAPE), sıfıra bölme hatasını önleyerek hesaplar.\n",
+    "    \"\"\"\n",
     "    y_true, y_pred = np.array(y_true), np.array(y_pred)\n",
     "    return np.mean(np.abs((y_true - y_pred) / (y_true + 1e-8))) * 100\n",
     "\n",
     "# --- 1. Adım: En İyi Deneyin Hiperparametrelerini ve Model Dosyasını Belirle ---\n",
     "\n",
     "# WandB arayüzünden 'model_path/lstm_LSTM_h50_l1.pt' deneyinin \"Config\" sekmesinden\n",
-    "# bu bilgileri almalısın. \n",
     "best_run_config = {\n",
     "    'hidden_dim': 50,\n",
     "    'num_layers': 1,\n",
@@ -12866,8 +12879,6 @@
     "    print(f\"'{best_model_filename}' dosyasından ağırlıklar başarıyla yüklendi.\")\n",
     "except FileNotFoundError:\n",
     "    print(f\"HATA: '{best_model_filename}' dosyası bulunamadı.\")\n",
-    "    # Gerekirse bu hücreyi durdurabilirsin\n",
-    "    # assert False, \"Model dosyası bulunamadı, devam edilemiyor.\"\n",
     "\n",
     "# --- 3. Adım: Yüklenen Model ile Tahmin Yap ---\n",
     "\n",
