--- a/2.1_SARIMA_Wandb.ipynb
+++ b/2.1_SARIMA_Wandb.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ef17b16d",
    "metadata": {},
    "outputs": [
@@ -108,6 +108,9 @@
     "# Bu hücre, model parametrelerini seçmeden önce veriyi anlamamıza yardımcı olur.\n",
     "# ADF Testi\n",
     "def adf_test(timeseries, series_name):\n",
+    "    \"\"\"\n",
+    "    Verilen bir zaman serisine Artırılmış Dickey-Fuller (ADF) durağanlık testini uygular ve sonuçları yorumlayarak ekrana yazdırır.\n",
+    "    \"\"\"\n",
     "    print(f\"--- '{series_name}' için Durağanlık Testi Sonuçları ---\")\n",
     "    result = adfuller(timeseries.dropna())\n",
     "    print(f'p-değeri: {result[1]}')\n",
@@ -135,6 +138,9 @@
     "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
     "\n",
     "def run_sarima_experiment(config):\n",
+    "    \"\"\"\n",
+    "    Verilen bir yapılandırma (config) ile belirli bir zaman serisi için `auto_arima` kullanarak en iyi SARIMA modelini bulur, eğitir, değerlendirir ve tüm sonuçları Weights & Biases'a kaydeder.\n",
+    "    \"\"\"\n",
     "    # 1. WandB Deneyini Başlat\n",
     "    run = wandb.init(project=\"bites-cpu-forecasting-final\", config=config, reinit=True)\n",
     "    \n",
