--- a/2.1_TRANSFORMER_Wandb.ipynb
+++ b/2.1_TRANSFORMER_Wandb.ipynb
@@ -51,12 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "286f80b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_sequences(data, lookback_window):\n",
+    "    \"\"\"\n",
+    "    Bir zaman serisi dizisini, modelin anlayacağı girdi (X) ve hedef (y) dizileri haline getirir.\n",
+    "    \"\"\"\n",
     "    X, y = [], []\n",
     "    for i in range(len(data) - lookback_window):\n",
     "        feature = data[i:(i + lookback_window)]\n",
@@ -103,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "ba2074bb",
    "metadata": {},
    "outputs": [],
@@ -111,6 +114,9 @@
     "# PositionalEncoding ve TransformerModel sınıfları\n",
     "class PositionalEncoding(nn.Module):\n",
     "    def __init__(self, d_model, max_len=5000):\n",
+    "        \"\"\"\n",
+    "        Modelin, sekanstaki pozisyon bilgisini anlaması için sinüs ve kosinüs dalgalarına dayalı bir kodlama matrisi oluşturur.\n",
+    "        \"\"\"\n",
     "        super(PositionalEncoding, self).__init__()\n",
     "        pe = torch.zeros(max_len, d_model)\n",
     "        position = torch.arange(0, max_len, dtype=torch.float).unsqueeze(1)\n",
@@ -121,19 +127,21 @@
     "        self.register_buffer('pe', pe)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        return x + self.pe[:x.size(0), :]\n",
-    "\n"
+    "        return x + self.pe[:x.size(0), :]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "7eec3b35",
    "metadata": {},
    "outputs": [],
    "source": [
     "class TransformerModel(nn.Module):\n",
     "    def __init__(self, input_dim=3, d_model=64, nhead=4, num_encoder_layers=2, dim_feedforward=128, dropout=0.1):\n",
+    "        \"\"\"\n",
+    "        Belirtilen hiperparametrelerle Transformer modelinin katmanlarını (girdi, pozisyonel kodlama, enkoder ve çıktı) tanımlar.\n",
+    "        \"\"\"\n",
     "        super(TransformerModel, self).__init__()\n",
     "        self.d_model = d_model\n",
     "        self.encoder = nn.Linear(input_dim, d_model)\n",
@@ -143,6 +151,9 @@
     "        self.decoder = nn.Linear(d_model, input_dim) # Çıktı boyutu girdiyle aynı (3)\n",
     "\n",
     "    def forward(self, src):\n",
+    "        \"\"\"\n",
+    "        Girdi dizisini model katmanlarından geçirir ve son zaman adımının çıktısını kullanarak nihai tahmini üretir.\n",
+    "        \"\"\"\n",
     "        src = self.encoder(src) * math.sqrt(self.d_model)\n",
     "        src = self.pos_encoder(src)\n",
     "        output = self.transformer_encoder(src)\n",
@@ -152,12 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "ecf82b22",
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_and_evaluate_transformer(config):\n",
+    "    \"\"\"\n",
+    "    Verilen hiperparametre yapılandırması (config) ile bir Transformer modelini eğitir, \n",
+    "    her epoch'ta performansını değerlendirir ve tüm deney sonuçlarını Weights & Biases'a kaydeder.\n",
+    "    \"\"\"\n",
     "    #  WandB Deneyini Başlat\n",
     "    run = wandb.init(project=\"bites-cpu-forecasting\", config=config, reinit=True)\n",
     "    \n",
