--- a/2_LSTM_Modeli.ipynb
+++ b/2_LSTM_Modeli.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "9292a4ed",
    "metadata": {},
    "outputs": [],
@@ -19,9 +19,10 @@
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "import plotly.graph_objects as go\n",
     "import time\n",
+    "import plotly.graph_objects as go\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "# Metrikler ve testler için\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
    ]
   },
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "418ae77d",
    "metadata": {},
    "outputs": [
@@ -119,6 +120,9 @@
    ],
    "source": [
     "def create_sequences(data, lookback_window):\n",
+    "    \"\"\"\n",
+    "    Bir zaman serisi dizisini, modelin anlayacağı girdi (X) ve hedef (y) dizileri haline getirir.\n",
+    "    \"\"\"\n",
     "    X, y = [], []\n",
     "    for i in range(len(data) - lookback_window):\n",
     "        feature = data[i:(i + lookback_window)]\n",
@@ -147,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "14caf5ae",
    "metadata": {},
    "outputs": [
@@ -166,11 +170,17 @@
    "source": [
     "class LSTMModel(nn.Module):\n",
     "    def __init__(self, input_size=3, hidden_layer_size=50, output_size=3):\n",
+    "        \"\"\"\n",
+    "        Modelin katmanlarını (LSTM ve Linear) tanımlar ve başlatır.\n",
+    "        \"\"\"\n",
     "        super().__init__()\n",
     "        self.lstm = nn.LSTM(input_size, hidden_layer_size, batch_first=True)\n",
     "        self.linear = nn.Linear(hidden_layer_size, output_size)\n",
     "\n",
     "    def forward(self, input_seq):\n",
+    "        \"\"\"\n",
+    "        Girdi dizisini LSTM katmanından geçirir ve son zaman adımının çıktısını kullanarak tahmini üretir.\n",
+    "        \"\"\"\n",
     "        lstm_out, _ = self.lstm(input_seq)\n",
     "        predictions = self.linear(lstm_out[:, -1, :])\n",
     "        return predictions\n",
@@ -306,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "7f6e2664",
    "metadata": {},
    "outputs": [
@@ -343,8 +353,10 @@
     "y_test_original_scale = scaler.inverse_transform(y_test.numpy())\n",
     "\n",
     "\n",
-    "# MAPE için özel fonksiyonumuzu tanımlayalım\n",
     "def mean_absolute_percentage_error(y_true, y_pred): \n",
+    "    \"\"\"\n",
+    "    Gerçek ve tahmin edilen değerler arasındaki ortalama mutlak yüzde hatayı (MAPE), sıfıra bölme hatasını önleyerek hesaplar.\n",
+    "    \"\"\"\n",
     "    y_true, y_pred = np.array(y_true), np.array(y_pred)\n",
     "    return np.mean(np.abs((y_true - y_pred) / (y_true + 1e-8))) * 100\n",
     "\n",
