--- a/2_SARIMA_Modeli.ipynb
+++ b/2_SARIMA_Modeli.ipynb
@@ -10,12 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "74d2e291",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gerekli kütüphaneler\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import time\n",
@@ -35,6 +34,9 @@
     "\n",
     "# MAPE fonksiyonu\n",
     "def mean_absolute_percentage_error(y_true, y_pred): \n",
+    "    \"\"\"\n",
+    "    Gerçek ve tahmin edilen değerler arasındaki ortalama mutlak yüzde hatayı (MAPE), sıfıra bölme hatasını önleyerek hesaplar.\n",
+    "    \"\"\"\n",
     "    y_true, y_pred = np.array(y_true), np.array(y_pred)\n",
     "    return np.mean(np.abs((y_true - y_pred) / (y_true + 1e-8))) * 100"
    ]
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3b663fd6",
    "metadata": {},
    "outputs": [
@@ -123,6 +125,9 @@
    ],
    "source": [
     "def adf_test(timeseries, series_name):\n",
+    "    \"\"\"\n",
+    "    Verilen bir zaman serisine Artırılmış Dickey-Fuller (ADF) durağanlık testini uygular ve sonuçları yorumlayarak ekrana yazdırır.\n",
+    "    \"\"\"\n",
     "    print(f\"--- '{series_name}' için Durağanlık Testi Sonuçları ---\")\n",
     "    result = adfuller(timeseries.dropna())\n",
     "    print(f'ADF İstatistiği: {result[0]}')\n",
