--- a/2_TRANSFORMER_Modeli.ipynb
+++ b/2_TRANSFORMER_Modeli.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a0f1abbd",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,9 @@
    ],
    "source": [
     "def create_sequences(data, lookback_window):\n",
-    "    \"\"\"Veriden LSTM'in anlayacağı sıralı diziler oluşturur.\"\"\"\n",
+    "    \"\"\"\n",
+    "    Veriden LSTM'in anlayacağı sıralı diziler oluşturur.\n",
+    "    \"\"\"\n",
     "    X, y = [], []\n",
     "    for i in range(len(data) - lookback_window):\n",
     "        feature = data[i:(i + lookback_window)]\n",
@@ -162,13 +164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "eb38918f",
    "metadata": {},
    "outputs": [],
    "source": [
     "class PositionalEncoding(nn.Module):\n",
     "    def __init__(self, d_model, max_len=5000):\n",
+    "        \"\"\"\n",
+    "        Modelin, sekanstaki pozisyon bilgisini anlaması için sinüs ve kosinüs dalgalarına dayalı bir kodlama matrisi oluşturur.\n",
+    "        \"\"\"\n",
     "        super(PositionalEncoding, self).__init__()\n",
     "        pe = torch.zeros(max_len, d_model)\n",
     "        position = torch.arange(0, max_len, dtype=torch.float).unsqueeze(1)\n",
@@ -179,18 +184,24 @@
     "        self.register_buffer('pe', pe)\n",
     "\n",
     "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        Girdi tensörüne, önceden hesaplanmış olan pozisyonel kodlama değerlerini ekler.\n",
+    "        \"\"\"\n",
     "        return x + self.pe[:x.size(0), :]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1316fd58",
    "metadata": {},
    "outputs": [],
    "source": [
     "class TransformerModel(nn.Module):\n",
     "    def __init__(self, input_dim=3, d_model=64, nhead=4, num_encoder_layers=2, dim_feedforward=128, dropout=0.1):\n",
+    "        \"\"\"\n",
+    "        Modelin katmanlarını (girdi kodlayıcı, pozisyonel kodlama, Transformer ve çıktı kod çözücü) tanımlar ve başlatır.\n",
+    "        \"\"\"\n",
     "        super(TransformerModel, self).__init__()\n",
     "        self.d_model = d_model\n",
     "        self.encoder = nn.Linear(input_dim, d_model)\n",
@@ -200,6 +211,9 @@
     "        self.decoder = nn.Linear(d_model, input_dim)\n",
     "\n",
     "    def forward(self, src):\n",
+    "        \"\"\"\n",
+    "        Girdi dizisini işler, pozisyon bilgisini ekler, Transformer'dan geçirir ve son adımdan tahmini üretir.\n",
+    "        \"\"\"\n",
     "        src = self.encoder(src) * math.sqrt(self.d_model)\n",
     "        src = self.pos_encoder(src)\n",
     "        output = self.transformer_encoder(src)\n",
@@ -333,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "cea2efca",
    "metadata": {},
    "outputs": [
@@ -385,10 +399,11 @@
     "predictions_original_scale = scaler.inverse_transform(predictions_array)\n",
     "y_test_original_scale = scaler.inverse_transform(y_test.numpy())\n",
     "\n",
-    "# MAPE için özel fonksiyonumuzu tanımlayalım\n",
     "def mean_absolute_percentage_error(y_true, y_pred): \n",
+    "    \"\"\"\n",
+    "    Gerçek ve tahmin edilen değerler arasındaki ortalama mutlak yüzde hatayı (MAPE), sıfıra bölme hatasını önleyerek hesaplar.\n",
+    "    \"\"\"\n",
     "    y_true, y_pred = np.array(y_true), np.array(y_pred)\n",
-    "    # Sıfıra bölme hatasını önlemek için küçük bir epsilon değeri ekleyelim\n",
     "    return np.mean(np.abs((y_true - y_pred) / (y_true + 1e-8))) * 100\n",
     "\n",
     "target_columns = ['avg_min_cpu', 'avg_max_cpu', 'avg_avg_cpu']\n",
@@ -11640,17 +11655,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d7f0fa5e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Optimizasyon için eğitim verisini tekrar eğitim ve validasyon olarak ikiye ayırıyoruz\n",
     "X_train_opt, X_val, y_train_opt, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=42)\n",
     "\n",
     "def objective(trial):\n",
-    "    \"\"\"Optuna'nın her bir deneme için çalıştıracağı fonksiyon.\"\"\"\n",
+    "    \"\"\"\n",
+    "    Optuna'nın her bir deneme için çalıştıracağı fonksiyon.\n",
+    "    \"\"\"\n",
     "    # --- 1. Hiperparametre Arama Uzayını Tanımla ---\n",
     "    d_model = trial.suggest_categorical('d_model', [32, 64, 128])\n",
     "    nhead = trial.suggest_categorical('nhead', [2, 4, 8])\n",
