--- a/3.1_Tespit_Wandb.ipynb
+++ b/3.1_Tespit_Wandb.ipynb
@@ -70,12 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f8c2f139",
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_detection_experiment(config):\n",
+    "    \"\"\"\n",
+    "    Verilen bir yapılandırma ile bir sınıflandırma modelini (Decision Tree veya Random Forest) eğitir, \n",
+    "    performansını değerlendirir ve tüm deney sonuçlarını Weights & Biases'a kaydeder.\n",
+    "    \"\"\"\n",
     "    # 1. WandB Deneyini Başlat\n",
     "    run = wandb.init(project=\"bites-cpu-detection\", config=config, reinit=True)\n",
     "    \n",
