--- a/EDA/grafik.ipynb
+++ b/EDA/grafik.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1c58e56f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "import plotly.express as px"
    ]
   },
   {
@@ -46,18 +48,6 @@
     "plt.title('Zamana Göre Ortalama CPU Yükü')\n",
     "plt.grid(True)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "a1d662ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import os\n",
-    "import plotly.express as px"
    ]
   },
   {
@@ -100,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3dff44c1",
    "metadata": {},
    "outputs": [
@@ -26938,7 +26928,6 @@
     }
    ],
    "source": [
-    "\n",
     "output_file = '/home/melih/Documents/coding/Bites_CPU_Analizi/genel_sunucu_yuku_tum_metrikler.csv'\n",
     "analyze_all_metrics(output_file)"
    ]
