--- a/EDA/project.ipynb
+++ b/EDA/project.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "## Adım 1: Veri Dosyalarını Yükleme ve Birleştirme\n",
     "\n",
-    "Bu adımda, `data` klasörüne indirdiğimiz 3 adet `vm_cpu_readings` dosyasını okuyup tek bir `DataFrame` altında birleştireceğiz."
+    "Bu adımda, `data` klasörüne indirdiğimiz 10 adet `vm_cpu_readings` dosyasını okuyup tek bir `DataFrame` altında birleştireceğiz."
    ]
   },
   {
@@ -4705,6 +4705,20 @@
     ")\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fe72043",
+   "metadata": {},
+   "source": [
+    "Turuncu çizgili vmId'den de görüldüğü üzere verisetinde süreklilik bulunmuyor. Bu sebeple 1_veri_isle.py scripti ile verilere ön işleme yapacağız."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "067cdafe",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -4723,7 +4737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
